--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 </head>
 <body>
     
-    
+    <h1>Welcom To </h1>
+    <h1><span class="title-color">Khairul Islam</span> Portfolio </h1>
+    <h3>Professional Web Developer</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro corrupti eos accusantium asperiores autem officiis illum mollitia saepe quia, animi aut perferendis earum perspiciatis molestiae deserunt iste inventore, sint suscipit!</p>
+    <img src="img/khairul.png" alt="Md. Khairul Islam">
 
 
 
