--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,16 +13,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
-    
-    <h1>Welcom To </h1>
-    <h1><span class="title-color">Khairul Islam</span> Portfolio </h1>
-    <h3>Professional Web Developer</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro corrupti eos accusantium asperiores autem officiis illum mollitia saepe quia, animi aut perferendis earum perspiciatis molestiae deserunt iste inventore, sint suscipit!</p>
-    <img src="img/khairul.png" alt="Md. Khairul Islam">
 
+    <section class="top-bg">
+        <div class="head-part">
+            <h1>Welcom To </h1>
+            <h1><span class="title-color">Khairul Islam</span> Portfolio </h1>
+            <h3>Professional Web Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro corrupti eos accusantium asperiores autem
+                officiis illum mollitia saepe quia, animi aut perferendis earum perspiciatis molestiae deserunt iste
+                inventore, sint suscipit! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident modi ut
+                beatae consequuntur reiciendis odit atque? Distinctio vitae consequuntur optio id animi asperiores?
+                Voluptatibus iure nemo quisquam eius dolorum commodi? Lorem ipsum dolor sit amet, consectetur
+                adipisicing elit. Quaerat aliquid dolorem minus magni assumenda pariatur praesentium labore. Iusto, at
+                omnis laudantium placeat veritatis praesentium atque cupiditate in, commodi ratione mollitia.</p>
 
+            <a class="link-button" target="blank" href="https://www.linkedin.com/in/zealouskhokon/">Hire Me</a>
+        </div>
 
+        <div class="img-part">
+            <img class="img-style" src="img/khairul.png" alt="Md. Khairul Islam">
+        </div>
+    </section>
 
 </body>
+
 </html>
