--- a/index.html
+++ b/index.html
@@ -5,29 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Md. Khairl Islam</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="img/Favicon.ico" type="image/x-icon">
 
 </head>
 
 <body>
 
-    <section class="top-bg">
+    <section class="top-bg flexcontainer">
         <div class="head-part">
             <h1>Welcom To </h1>
             <h1><span class="title-color">Khairul Islam</span> Portfolio </h1>
-            <h3>Professional Web Developer</h3>
+            <h2>Professional Web Developer</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro corrupti eos accusantium asperiores autem
                 officiis illum mollitia saepe quia, animi aut perferendis earum perspiciatis molestiae deserunt iste
                 inventore, sint suscipit! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident modi ut
                 beatae consequuntur reiciendis odit atque? Distinctio vitae consequuntur optio id animi asperiores?
-                Voluptatibus iure nemo quisquam eius dolorum commodi? Lorem ipsum dolor sit amet, consectetur
-                adipisicing elit. Quaerat aliquid dolorem minus magni assumenda pariatur praesentium labore. Iusto, at
-                omnis laudantium placeat veritatis praesentium atque cupiditate in, commodi ratione mollitia.</p>
+                Voluptatibus iure nemo quisquam eius dolorum commodi? </p>
 
             <a class="link-button" target="blank" href="https://www.linkedin.com/in/zealouskhokon/">Hire Me</a>
         </div>
@@ -36,6 +35,59 @@
             <img class="img-style" src="img/khairul.png" alt="Md. Khairul Islam">
         </div>
     </section>
+
+
+    <section class="db flexcontainer">
+
+        <div class="img-part">
+            <img class="img-style" src="img/khairul 2.png" alt="Md. Khairul Islam">
+        </div>
+
+        <div class="head-part">
+            <h1> Dream Big </h1>
+            <h2>Become a web developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro corrupti eos accusantium asperiores autem
+                officiis illum mollitia saepe quia, animi aut perferendis earum perspiciatis molestiae deserunt iste
+                inventore, sint suscipit! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Provident modi ut
+                beatae consequuntur reiciendis odit atque? Distinctio vitae consequuntur optio id animi asperiores?
+                Voluptatibus iure nemo quisquam eius dolorum commodi? </p>
+
+            <a class="link-button" target="blank" href="https://www.linkedin.com/in/zealouskhokon/">Download Resume</a>
+        </div>
+
+    </section>
+
+
+
+    <section class="exp">
+        <h1>Experiences</h1>
+        <div class="flexcontainer">
+            <div class="half-width">
+                <h1>Full Stack Web Developer</h1>
+                <h3 class="title-color">2022-Present | Senior Web Developer</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, quo doloribus ad a expedita hic nihil
+                    possimus at tempore voluptatibus error corrupti fugit quis placeat, deserunt nobis saepe minus
+                    veniam?
+                </p>
+            </div>
+            <div class="half-width">
+                <h1>Junior Web Developer</h1>
+                <h3 class="title-color">2020-2022 | Baby Develpoper</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, quo doloribus ad a expedita hic nihil
+                    possimus at tempore voluptatibus error corrupti fugit quis placeat, deserunt nobis saepe minus
+                    veniam?</p>
+            </div>
+        </div>
+
+    </section>
+
+
+    <br><br><br><br><br><br><br>
+
+
+
+
+
 
 </body>
 
