--- a/index.html
+++ b/index.html
@@ -52,17 +52,16 @@
                 beatae consequuntur reiciendis odit atque? Distinctio vitae consequuntur optio id animi asperiores?
                 Voluptatibus iure nemo quisquam eius dolorum commodi? </p>
 
-            <a class="link-button" target="blank" href="https://www.linkedin.com/in/zealouskhokon/">Download Resume</a>
+            <a class="link-button" target="blank" href="https://khairulislam.com/freelancer/">Download Resume</a>
         </div>
 
     </section>
 
 
-
     <section class="exp">
-        <h1>Experiences</h1>
+        <h1 class="exphead">Experiences</h1>
         <div class="flexcontainer">
-            <div class="half-width">
+            <div id="expborder" class="half-width">
                 <h1>Full Stack Web Developer</h1>
                 <h3 class="title-color">2022-Present | Senior Web Developer</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, quo doloribus ad a expedita hic nihil
@@ -70,7 +69,7 @@
                     veniam?
                 </p>
             </div>
-            <div class="half-width">
+            <div id="expborder1" class="half-width">
                 <h1>Junior Web Developer</h1>
                 <h3 class="title-color">2020-2022 | Baby Develpoper</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim, quo doloribus ad a expedita hic nihil
@@ -81,13 +80,11 @@
 
     </section>
 
-
-    <br><br><br><br><br><br><br>
-
-
-
-
-
+    <footer>
+        <p>Copyright © 2021 Khairul Islam | Powered by <a target="_blank" class="footlink"
+                href="https://khairulislam.com/">Khairul
+                Islam</a> </p>
+    </footer> <br><br>
 
 </body>
 
