final update last

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
         <div class="head-part">
-            <h1> Dream Big </h1>
+            <h1> Don't Stop <span class="title-color">Dreaming</span> </h1>
             <h2>Become a web developer</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro corrupti eos accusantium asperiores autem
                 officiis illum mollitia saepe quia, animi aut perferendis earum perspiciatis molestiae deserunt iste
